syntax = "proto3";

package tages;

option go_package = "github.com/MrPark97/tages/pb";

import "info_message.proto";

// message for UploadImage request
message UploadImageRequest {
    oneof data {
        Info info = 1;
        bytes chunk_data = 2;
    }
}

// message for UploadImage Response
message UploadImageResponse {
    string name = 1;
    uint32 size = 2;
}

// message for DownloadImage request
message DownloadImageRequest {
    // image name (without extension)
    string name = 1;
}

// message for UploadImage response
message DownloadImageResponse {
    oneof data {
        Info info = 1;
        bytes chunk_data = 2;
    }
}

// message for GetUploadedImagesTableString request
message GetUploadedImagesTableStringRequest {
    // limit equality to zero tells that there is no limit (request all images)
    uint32 limit = 1;
}

// message for GetUploadedImagesTableString response
message GetUploadedImagesTableStringResponse {
    string table = 1;
}

// service to operate with images (upload/download) and get info about already uploaded images
service ImageService {
    rpc GetUploadedImagesTableString(GetUploadedImagesTableStringRequest) returns (GetUploadedImagesTableStringResponse) {};
    rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {};
    rpc DownloadImage(DownloadImageRequest) returns (stream DownloadImageResponse) {};
}